# ros_best_practices

./: .gitignore  LICENSE  README.md  dependencies.vcs  jenkins-pipeline
.github/workflows/: ros.yml
ros_package_template/: CMakeLists.txt  LICENSE  README.md  package.xml
ros_package_template/config/: default.yaml  template.yaml
ros_package_template/include/ros_package_template/: Algorithm.hpp  RosPackageTemplate.hpp  algorithm.hpp  ros_package_template.hpp
ros_package_template/launch/: ros_package_template.launch  ros_package_template.launch.py  ros_package_template_overlying_params.launch
ros_package_template/src/: Algorithm.cpp  RosPackageTemplate.cpp  algorithm.cpp  ros_package_template.cpp  ros_package_template_node.cpp
ros_package_template/src/ros_package_template/: RosPackageTemplate.cpp
ros_package_template/test/: AlgorithmTest.cpp  test_ros_package_template.cpp
